# workbench

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  train.py
.github/workflows/: train.yml
analytics/: pyproject.toml
analytics/notebooks/: TibHCR_eda.ipynb  bdrc_eda.ipynb  train.ipynb
mdata/: pyproject.toml
mdata/src/: __init__.py  bdrc_script_classification_dataset.py  mutils.py
models/mk1/: pyproject.toml
models/mk1/src/mk1/: __init__.py
models/script_classification/: pyproject.toml
models/script_classification/src/: __init__.py  cnn.py
src/: mlflow.py
src/data/: kaggle.py
