[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.40.25",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "mlflow>=3.1.4",
    "notebook>=7.4.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "poetry>=2.1.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]
