[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = []

[tool.uv.sources]
mk1 = { workspace = true }
analytics = { workspace = true }

[tool.uv.workspace]
members = [
    "models/*", "analytics",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pip>=25.2",
    "mk1"
]
package = false

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  ".eggs",
  ".git",
  ".venv",
  "build",
  "dist",
  "notebooks",
  ".cache"
]
line-length = 100

[tool.pyright]
exclude = [".venv", ".github", "docs", "tests", ".devcontainer"]
include = ["src", "scripts"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
