[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "boto3>=1.40.28",
    "mlflow>=3.3.2",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
mk1 = { workspace = true }
script-classification = { workspace = true }
mdata = { workspace = true }
analytics = { workspace = true }

[tool.uv.workspace]
members = [
    "models/*",
    "analytics",
    "mdata",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pip>=25.2",
    "mk1",
    "script-classification",
    "mdata"
]
package = false

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  ".eggs",
  ".git",
  ".venv",
  "build",
  "dist",
  "notebooks",
  ".cache"
]
line-length = 100

[tool.pyright]
exclude = [".venv", ".github", "docs", "tests", ".devcontainer"]
include = ["src", "scripts"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
