[project]
name = "mk1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roman Grigoriev", email = "hjklvfr@list.ru" }
]
requires-python = ">=3.12.9"
dependencies = [
    "albumentationsx>=2.0.10",
    "numpy>=2.3.3",
    "rich>=14.1.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
